--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet"> -->
     <!-- <link
       rel="stylesheet"
