--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       crossorigin="anonymous"
     /> -->
 
-    <title>ElectriCasa</title>
+    <title>Electricasa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
